--- a/cheerio/package.json
+++ b/cheerio/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
+    "exceljs": "^4.3.0",
     "request": "^2.88.2",
     "xlsx": "^0.17.2"
   },
