--- a/cheerio_Projects/package.json
+++ b/cheerio_Projects/package.json
@@ -7,6 +7,7 @@
     "cheerio": "^1.0.0-rc.10",
     "exceljs": "^4.3.0",
     "request": "^2.88.2",
+    "write-excel-file": "^1.3.3",
     "xlsx": "^0.17.2"
   },
   "devDependencies": {},
